# enginge_analysis

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.serena/: project.yml
config/: backtest.yaml  hypothesis_registry.yaml
config/params/: vn.yaml
data/: README.md
docs/: 00_engine_design.md  01_research_methodology.md  02_engineering_plan.md  05_build_order.md  06_transmission_cascade_update.md  07_formulas_reference.md  07_formulas_reference_v1_archived.md  07_formulas_reference_v2.md  08_review_and_recommendations.md  09_review_response.md  10_action_plan.md  11_product_plan.md  12_specification_curve_protocol.md  13_e1c_and_grid_plan.md  14_product_completion_plan.md  g0_governance.md
docs/reports/: E0_alignment_diagnostic_e73a0a307fc3_c93a877.md  E0_replication_CI2022_e73a0a307fc3.md  E1_shock_diagnosis_8cc9bfb5c3b6.md  E1b_shock_ranking_8cc9bfb5c3b6.md  E1c_shock_detection_8cc9bfb5c3b6.md  E1c_shock_detection_8cc9bfb5c3b6_adc2ac4.md  G2a_global_macro.md  G2a_innovation_8cc9bfb5c3b6_ar5-5-2.md  SCA_calibration_d6b118d.md  SCA_calibration_quick.md
notebooks/: 01_explore.ipynb
scripts/: run_e0_alignment_diagnostic.py  run_e0_replication.py  run_e1_diagnosis.py  run_e1b_shock_ranking.py  run_e1c_shock_detection.py  run_sca_calibration.py  run_tier2.py
sql/: 001_schema_core.sql
src/gpr_engine/: __init__.py
tests/: test_config_locked.py  test_e0_alignment_diagnostic.py  test_e0_replication.py  test_e1c_detection.py  test_registry_locked.py  test_report_guard_p1.py
tests/econ/: test_data_files.py  (+11 more)
(+19 files in other folders)
